# lambda-aws-python-fastapi

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  requirements.txt  samconfig.toml  template.yml
src/: main.py
src/core/: auth.py  database.py  settings.py
src/models/: user.py
src/repositories/: user.py
src/routes/: auth.py  user.py
src/schemas/: user.py
